# xmas-challenge-2k18

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Config.toml  README.md  clang-format.cmake
cmake/: LeapConfig.cmake
data/shaders/: colour_font.f.glsl  ident.v.glsl
src/: CMakeLists.txt  aircraft_data.h  application.cpp  application.h  arm_control.cpp  arm_control.h  commands.cpp  commands.h  config.cpp  config.h  joystick_interface.cpp  joystick_interface.h  main.cpp  test_patterns.cpp  test_patterns.h
src/glpp/: CMakeLists.txt  colours.h  display_list.cpp  display_list.h  font_atlas.cpp  font_atlas.h  font_engine.cpp  font_engine.h  generic_lock.cpp  generic_lock.h  gl_includes.h  glpp.h  program.cpp  program.h  types.h  wrappers.cpp  wrappers.h
src/input/: CMakeLists.txt  input.h  leap_interface.cpp  leap_interface.h
src/symbols/: CMakeLists.txt  airspeed.cpp  airspeed.h  base_symbol.h  heading_tape.cpp  heading_tape.h  mesh_util.cpp  mesh_util.h  pong.cpp  pong.h
